--- a/src/scss/body.css
+++ b/src/scss/body.css
@@ -28,9 +28,10 @@
 }
 
 .body .plus {
-  position: relative;
+  position: fixed;
   width: 100%;
   height: 7rem;
+  z-index: 1000;
 }
 
 .body .plus .img {
@@ -77,7 +78,7 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  padding-top: 4rem;
+  padding-top: 7rem;
 }
 
 .body .main .single {
@@ -85,6 +86,7 @@
   width: 40%;
   height: 5rem;
   background-color: #c0e0d0;
+  margin-bottom: 1rem;
   border-radius: 0.6rem;
   -webkit-box-shadow: 2px 2px 6px #88c8a8;
           box-shadow: 2px 2px 6px #88c8a8;
@@ -167,7 +169,7 @@
   text-transform: capitalize;
 }
 
-.body .main .single .txt {
+.body .main .single .text {
   position: relative;
   width: 90%;
   height: 100%;
@@ -186,7 +188,7 @@
   text-indent: 0.8rem;
 }
 
-.body .main .single .txt h1 {
+.body .main .single .text h1 {
   font-family: "Poppins-Light";
   font-size: 1.8rem;
   text-transform: capitalize;
@@ -207,11 +209,13 @@
           align-items: center;
   background-color: #88c8a8;
   border-radius: 0.6rem;
+  cursor: pointer;
+  z-index: 19;
 }
 
 .body .main .single .dots img {
   position: relative;
   height: 35%;
-  cursor: pointer;
+  z-index: 20;
 }
 /*# sourceMappingURL=body.css.map */
