--- a/src/scss/body.scss
+++ b/src/scss/body.scss
@@ -7,9 +7,10 @@
   height: calc(100vh - 7rem);
   background-color: transparent;
   & .plus {
-    position: relative;
+    position: fixed;
     width: 100%;
     height: 7rem;
+    z-index: 1000;
     & .img {
       padding-left: 1rem;
       @include flex;
@@ -35,13 +36,14 @@
     width: 100%;
     @include flex;
     flex-direction: column;
-    padding-top: 4rem;
+    padding-top: 7rem;
     & .single {
       position: relative;
       width: 40%;
       height: 5rem;
       background-color: $theme4;
       //   border: 2px solid $theme6;
+      margin-bottom: 1rem;
       border-radius: 0.6rem;
       box-shadow: 2px 2px 6px $theme6;
       @include flex;
@@ -88,7 +90,7 @@
           }
         }
       }
-      & .txt {
+      & .text {
         position: relative;
         width: 90%;
         height: 100%;
@@ -108,11 +110,12 @@
         @include flex;
         background-color: $theme6;
         border-radius: 0.6rem;
+        cursor: pointer;
+        z-index: 19;
         & img {
           position: relative;
           height: 35%;
-          //   width: 60%;
-          cursor: pointer;
+          z-index: 20;
         }
       }
     }
